# counterterms

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  ENTRYPOINTS.md  LICENSE  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
conventions/: index.html
counterterms/: __init__.py  structures.py
counterterms/core/: homogeneity.py  jets.py  signature.py
docs/: api.md  conventions.md  getting-started.md  index.md  mathematics.md  scope.md  validation.md
examples/: 01_renormalized_equation.py  02_trees_and_structure.py  03_systems_and_noises.py  04_daprato_phi4.py  05_bhz_and_export.py  06_fractional_heat.py  README.md
getting-started/: index.html
mathematics/: index.html
notes/: architecture.md  audit.md  cointeraction_singular_noise.md  elementary_expectations.md  free_constants_and_the_hopf_core.md  initial_plan.md  literature_comparison.md  math_audit.md  output.md  paper_coverage.md  phase4_plan.md  swapping_the_operator.md  use_cases.md  validation.md
references/: README.md  tourist_guide.tex
regstruct/: __init__.py  api.py  structures.py
scope/: index.html
search/: search_index.json
tests/: conftest.py  test_coproducts.py  test_core.py  test_daprato.py  test_examples.py  test_export.py  test_golden_gkpz.py  test_goldens.py  test_homogeneity.py  test_hopf.py  test_phase2.py  test_phase4_seams.py  test_pipeline.py  test_render.py  test_rule.py  test_scheme.py  test_scope.py  test_structures.py  test_trees.py  test_validation.py
validation/: index.html
(+37 files in other folders)
