[project]
name = "counterterms"
version = "0.2.0"
description = "Symbolic renormalized equations for singular SPDEs (Bailleul-Hoshino tourist guide)"
requires-python = ">=3.11"
dependencies = ["sympy>=1.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["counterterms"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
# E741 (ambiguous name l/r) is intentional: l/r = left/right tensor legs in the coproducts.
lint.ignore = ["E741"]
